Replace Guava functions and Optional with Java 8 ones